MDEV-8755 Equal field propagation is not performed any longer for the IN list when multiple comparison types